<resources>
    <string name="app_name">Run for Life well data app</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Login with Facebook</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="facebook_application_id">267283097453472</string>
    <string name="fb_login_protocol_scheme">fb267283097453472</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="run_for_life_image">Run for Life Image</string>
    <string name="access_storage">Store Image</string>
    <string name="build_profile">Build Profile</string>
    <string name="enter_your_bio">Enter your bio</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="set">Set Bio and Username</string>
    <string name="viewppt">View Powerpoint</string>
    <string name="demo_ppt">Demo PowerPoint</string>
    <string name="kenyan_hint">Kenyan?</string>
    <string name="settings">Settings</string>
    <string name="view_messages">View Messages</string>
    <string name="profilepic">profilePic</string>
    <string name="input">Input</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_navigation_bar">Bottom Navigation Bar</string>
    <string name="donate">Donate</string>
    <string name="get_info">Get Info</string>
    <string name="messages">Messages</string>
    <string name="input_map_data">Input map data</string>
    <string name="title_activity_hydro_data_map">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="shake_your_power">Shake Your Power</string>
    <string name="remove_marker">Remove Marker</string>
    <string name="show_nearby_data">Show nearby data</string>
    <string name="enter_detailed_info">Enter new well info</string>
    <string name="enter_historical_info">Enter historical well info</string>
    <string name="get_educational_content">Get Educational Content</string>
    <string name="map">Map</string>
    <string name="is_this_well_a_historic_well">Is this well a historic well</string>
    <string name="enter_a_town_name">Enter a town name</string>
    <string name="enter_a_well_name">Enter a well name</string>
    <string name="enter_the_sponsor">Enter the sponsor</string>
    <string name="enter_type_of_property">Enter type of property</string>
    <string name="enter_county">Enter county</string>
    <string name="enter_pump_installation_date">Enter pump Installation Date</string>
    <string name="enter_drilling_finish_date">Enter drilling Finish Date</string>
    <string name="enter_drilling_start_date">Enter drilling start date</string>
    <string name="was_a_rockbit_used">Was a rockbit used?</string>
    <string name="enter_local_terrain">Enter local terrain</string>
    <string name="enter_location_relative_to_slope">Enter location Relative To Slope</string>
    <string name="enter_contact_name">Enter contact name</string>
    <string name="enter_contact_cell">Enter contact cell</string>
    <string name="enter_any_other_comments">Enter any other comments</string>
    <string name="enter_number_data">Enter number data</string>
    <string name="enter_number_of_days_drilling">Enter number Of Days Drilling</string>
    <string name="enter_averagedrillingperdayinmeters">Enter averageDrillingPerDayInMeters</string>
    <string name="enter_depth">Enter depth</string>
    <string name="enter_depthtowater">Enter depthToWater</string>
    <string name="enter_depthtobedrock">Enter depthToBedrock</string>
    <string name="enter_wellwatercolumn">Enter wellWaterColumn</string>
    <string name="enter_depthdrilledintobedrock">Enter depthDrilledIntoBedRock</string>
    <string name="enter_numberofnearbywells">Enter numberOfNearbyWells</string>
    <string name="dry_season_flow_rate">Dry Season Flow Rate</string>
    <string name="enter_word_data">Enter word data</string>
    <string name="enter_id_of_nearby_wells_x_y_z">Enter id Of Nearby Wells (x,y,z,...)</string>
    <string name="wet_season_water_table_depth">Wet Season Water Table Depth</string>
    <string name="dry_season_water_table_depth">Dry Season Water Table Depth</string>
    <string name="wet_season_flow_rate">Wet Season Flow Rate</string>
    <string name="send_data_to_server">Send data to server</string>
    <string name="cancel">Cancel</string>
    <string name="show_well_data">Show Well Data</string>
    <string name="enter_a_name_here">Enter a name here</string>
    <string name="enter_a_street_address">Enter a street address</string>
    <string name="enter_a_town_name_here">Enter a town name here</string>
</resources>