<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/string_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <!--Strings-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/drilling_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_drilling_start_date"
                android:inputType="text" />

            <EditText
                android:id="@+id/drillingFinishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_drilling_finish_date"
                android:inputType="text" />

            <EditText
                android:id="@+id/pumpInstallationDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_pump_installation_date"
                android:inputType="text" />

            <EditText
                android:id="@+id/county"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_county"
                android:inputType="text" />

            <EditText
                android:id="@+id/typeOfProperty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_type_of_property"
                android:inputType="text" />

            <EditText
                android:id="@+id/cdnGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_sponsor"
                android:inputType="text" />

            <EditText
                android:id="@+id/well_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_well_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/street_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_street_address"
                android:inputType="text" />

            <EditText
                android:id="@+id/town"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_town_name"
                android:inputType="text" />

            <RadioButton
                android:id="@+id/historical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/is_this_well_a_historic_well" />

            <RadioButton
                android:id="@+id/rockbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/was_a_rockbit_used" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/localTerrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_local_terrain"
                android:inputType="text" />

            <EditText
                android:id="@+id/locationRelativeToSlope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_location_relative_to_slope"
                android:inputType="text" />

            <EditText
                android:id="@+id/contactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_contact_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/contactCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_contact_cell"
                android:inputType="text" />

            <EditText
                android:id="@+id/comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_any_other_comments"
                android:inputType="text" />

            <Button
                android:id="@+id/switchViews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number_data"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/sendData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/send_data_to_server"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cancel"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>
    </LinearLayout>

    <!--Numbers-->
    <LinearLayout
        android:id="@+id/number_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/numberOfDaysDrilling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number_of_days_drilling"
                android:inputType="text" />

            <EditText
                android:id="@+id/averageDrillingPerDayInMeters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_averagedrillingperdayinmeters"
                android:inputType="text" />

            <EditText
                android:id="@+id/depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_depth"
                android:inputType="text" />

            <EditText
                android:id="@+id/depthToWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_depthtowater"
                android:inputType="text" />

            <EditText
                android:id="@+id/depthOfPumpIntake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Enter depthOfPumpIntake" />

            <EditText
                android:id="@+id/depthToBedrock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_depthtobedrock"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/wellWaterColumn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_wellwatercolumn"
                android:inputType="text" />

            <EditText
                android:id="@+id/depthDrilledIntoBedRock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_depthdrilledintobedrock"
                android:inputType="text" />

            <EditText
                android:id="@+id/numberOfNearbyWells"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_numberofnearbywells"
                android:inputType="text" />

            <EditText
                android:id="@+id/drySeasonFlowRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dry_season_flow_rate"
                android:inputType="text" />

            <EditText
                android:id="@+id/wetSeasonFlowRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/wet_season_flow_rate"
                android:inputType="text" />

            <EditText
                android:id="@+id/drySeasonWaterTableDepth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/dry_season_water_table_depth"
                android:inputType="text" />

            <EditText
                android:id="@+id/wetSeasonWaterTableDepth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/wet_season_water_table_depth"
                android:inputType="text" />

            <EditText
                android:id="@+id/idOfNearbyWells"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_id_of_nearby_wells_x_y_z"
                android:inputType="text" />

            <Button
                android:id="@+id/switchViews1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_word_data"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/sendData1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/send_data_to_server"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/cancel_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cancel"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
