<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/enter_marker_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/well_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter a name here" />

        <EditText
            android:id="@+id/street_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter a street address" />

        <EditText
            android:id="@+id/town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Enter a town name here" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/more_data"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_detailed_info"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/enter_historical_data"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_historical_info"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/remove_marker"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:hint="@string/remove_marker"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/show_nearby_wells_data"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:hint="@string/show_nearby_data"
                android:textColor="@color/white"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>